--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KamarKhali Broadband LIVE TV</title>
+    <title>K0ntholl Broadband LIVE TV</title>
     <meta name="description" content="ENJOY FREE LIVE IPTV">
     <meta name="keywords" content="Watch live sports streaming online">
     <meta name="author" content="PK">
@@ -143,7 +143,7 @@
 
 <body>
     <header>
-        <img src="https://i.ibb.co.com/WthG9Mn/IMG-20241015-WA0000.jpg" alt="Website Logo" style="width: 450px; height: auto; display: block; margin: 30px;">
+        <img src="https://i.ibb.co.com/WthG9Mn/IMG-20241015-WA0000jpg" alt="Website Logo" style="width: 450px; height: auto; display: block; margin: 30px;">
     </header>
 
     <div class="video-player">
@@ -160,7 +160,7 @@
 .notice-movies{margin-top:3px;background:#000000;color:white;position:relative;padding:10px;overflow:hidden;font-family:var(--font-secondary);border-radius:7px}.notice-movies::before{content:'';position:absolute;border-left:17px solid var(--black);border-bottom:17px solid var(--black);border-top:17px solid transparent;border-right:17px solid transparent;left:98px;top:0;z-index:1}.notice-movies::after{content:'Notice:';position:absolute;height:100%;padding:0 6px;line-height:43px;background:Green;color:white;font-family:var(--font-primary);font-weight:600;left:0;top:0} </style>
 <center>
      <marquee class="notice-movies" scrollamount="4">
-      ***কামারখালী ব্রডব্যান্ড লাইভ টিভিতে আপনাদের সবাইকে স্বাগতম। লাইভ টিভি দেখুন সম্পূর্ন ফ্রিতে। চ্যানেল প্লে হতে ৫ থেকে ১০ সেকেন্ড টাইম নিতে পারে, তবে সেটা সার্ভার ও আপনার ইন্টারনেটের উপর নির্ভর করবে। 
+      ***Tonton Kono Ora Kok Tonton Yo Kono Intine Terserah............ 
      </marquee>
 </center>
 </div> 
@@ -171,7 +171,7 @@
 </div>
 
 </div>
-    <div class="live-section" onclick="loadVideo('https://raw.githubusercontent.com/parvezkhan11bd/my_iptv/refs/heads/main/video/playlist.m3u8')">
+    <div class="live-section" onclick="loadVideo('https://raw.githubusercontent.com/erlkim/anu/refs/heads/main/anu2024/campursari')">
         <div class="team-box">
             <div class="team">
                 <img src="https://i.ibb.co.com/Qj2XsrZ/images.jpg" alt="Team 1 Logo" class="team-logo">
@@ -184,7 +184,7 @@
             </div>
         </div>
     </div>
-    <div class="live-section" onclick="loadVideo('https://raw.githubusercontent.com/parvezkhan11bd/my_iptv/refs/heads/main/video/playlist2.m3u8')">
+    <div class="live-section" onclick="loadVideo('https://raw.githubusercontent.com/erlkim/anu/refs/heads/main/anu2024/campursari')">
         <div class="team-box">
             <div class="team">
                 <img src="https://i.ibb.co.com/tmD03TM/Picsart-24-10-20-22-18-12-740.jpg" alt="Team 1 Logo" class="team-logo">
@@ -248,7 +248,7 @@
 
         function loadChannels() {
             setTimeout(() => {
-                fetch('https://raw.githubusercontent.com/parvezkhan11bd/parvez_ip/refs/heads/main/toffe.m3u')
+                fetch('https://raw.githubusercontent.com/erlkim/anu/refs/heads/main/anu2024/campursari')
                     .then(response => response.text())
                     .then(data => {
                         const lines = data.split('\n');
