--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
     </script>
 
     <footer>
-        <p>&copy; 2024 KamarKhali Broadband. All Rights Reserved.</p>
+        <p>&copy; 2024 Kh00ntol Broadband. All Rights Reserved.</p>
     </footer>
 </body>
 
